tests/trybuild/views/comma_alone.rs
use brood::query::views;

type Views = views!(,);

fn main() {}
